# StreamsUtilsDev

./: Cargo.toml  Manifest.toml  README.md  base.apptainer  build.apptainer  justfile  patch_pyf.py
analysis/: Manifest.toml  Project.toml  compare_thesis_plots.jl  discretize_jet_velocity.jl  exp_irregular_grid_derivative_approx.jl  lab_presentation backup 1.jl  lab_presentation.jl  notebook backup 1.jl  notebook backup 2.jl  notebook.jl
analysis/scripts/: animate.jl
analysis/src/: analysis.jl  getters.jl  h5_helpers.jl  lib_animation.jl  loaders.jl
output/distribute_save/: dt_limitations  mesh.h5
output/distribute_save/20250607.191128/Initial_Parameters/: InitialActorParameters.pt  InitialActorTargetParameters.pt  InitialCriticParameters.pt  InitialCriticTargetParameters.pt
output/input/: input.json
src/: animate.rs  binary_to_vtk.rs  cli.rs  config_generator.rs  deallocate_code_generation.py  hdf5_to_vtk.rs  main.rs  prelude.rs  probe.rs  probe_binary.rs  spans_to_vtk.rs  utils.rs  vtk_to_mat.rs
src/cases/: ai_institute.rs  mod.rs  variable_dt.rs
src/cases/jet_validation/: mod.rs
src/cases/sbli/: mod.rs
src/run/: container.rs  local.rs  mod.rs
static/: span_average_input.json  span_probe_example.binary
